[package]
authors     = ["Cheng JIANG <alex_cj96@foxmail.com>"]
description = "port allocator"
edition     = "2018"
license     = "MIT"
name        = "port-alloc"
version     = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv               = "1.0.7"
futures-util      = "0.3.8"
signal-hook       = "0.2.1"
signal-hook-tokio = { version = "0.1.0", features = ["support-v0_3"] }
tokio             = { version = "0.3.5", features = ["rt"] }
